--- a/assignement.ipynb
+++ b/assignement.ipynb
@@ -5500,6 +5500,7 @@
     "model_dense = tf.keras.models.Sequential([\n",
     "  tf.keras.layers.Flatten(input_shape=(26,26,3)),\n",
     "  tf.keras.layers.Dense(16, activation='relu'),\n",
+    "  tf.keras.layers.Dense(32, activation='relu'),\n",
     "  tf.keras.layers.Dense(9)\n",
     "])\n",
     "model_dense.compile(\n",
